#æŒ‡å®šæ‰€ä¾èµ–çš„cmakeæœ€ä½ç‰ˆæœ?
cmake_minimum_required(VERSION 2.8)

# è®¾ç½®ä»£ç æ ¹ç›®å½?
set(CODE_DIE ${CMAKE_CURRENT_SOURCE_DIR}/../../../..)

# åŠ è½½å…¬å…±è®¾ç½®
include(${CODE_DIE}/build/env.cmake)

# é¡¹ç›®åç§°
project(msg)

# æ·»åŠ ç›®å½•ä¸‹æ‰€æœ‰åŸæ–‡ä»¶
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/source ${PROJECT_NAME}_SRCS)

# è®¾ç½®ç›®æ ‡ç”Ÿæˆè·¯å¾„
#SET(LIBRARY_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../../target/lib)

# add the executable æ·»åŠ æ„å»ºAutoTaskçš„Cæ–‡ä»¶
add_library(${PROJECT_NAME} STATIC ${${PROJECT_NAME}_SRCS})

#å¤´æ–‡ä»¶æœç´¢è·¯å¾?
target_include_directories(${PROJECT_NAME} PRIVATE
	"${CODE_DIE}/include"
	"${CODE_DIE}/lib/include"
	"${CODE_DIE}/lib/code/storage"
	"${CODE_DIE}/lib/code/msgbus/include"
	"${CMAKE_CURRENT_SOURCE_DIR}/include"
	"${CMAKE_CURRENT_SOURCE_DIR}/../include"
	"${CMAKE_CURRENT_SOURCE_DIR}/../appinclude"
    "${CMAKE_CURRENT_SOURCE_DIR}/../event"
    "${CMAKE_CURRENT_SOURCE_DIR}/../gui/include"
	"${CMAKE_CURRENT_SOURCE_DIR}/../oop/include"
)